syntax = "proto3";

package heroes;

option java_multiple_files = true;
option java_package = "com.tdc.heroes";

// MODELS
message Mission {
  repeated Hero heroes = 1;
  string city = 2;
  string villain = 3;
}

message Hero {
  string nickname = 1;
  repeated Skill skills = 2;
}

message Skill {
  string strength = 1;
}

message Team {
  int32 id = 1;
  string name = 2;
  repeated Hero heroes = 3;
}

message Empty {}

// SERVICE REQUEST
message CreateHeroRequest {
  string nickname = 1;
  repeated Skill skills = 2;
}

message ListHeroesRequest{
  Empty empty = 1;
}

message NewMissionRequest {
  string city = 1;
  string villain = 2;
  repeated string skillsNeeded = 3;
}

// SERVICE RESPONSE
message CreateHeroResponse {
  Hero hero = 1;
}

message ListHeroesResponse {
  repeated Hero heroes = 1;
}

message NewMissionResponse {
  bool savedTheDay = 1;
}


// SERVICE
service HeroesService {
  rpc createHero(stream CreateHeroRequest) returns (stream CreateHeroResponse) {};
  rpc listHeroes(ListHeroesRequest) returns (ListHeroesResponse) {};
}

service LaunchMissionService {
  rpc newMission(NewMissionRequest) returns (NewMissionResponse) {};
}
